@@ -342,14 +342,15 @@ New and extended requests
 
 .trimat left-offset top-offset width height
 	sets the "TrimBox" page parameter for PDF generation and enables
-	printing of visible cut marks and/or registration marks when used
-	with "dpost -M cut:registration". The four arguments give the
-	offset from the left and top margins of the document (as set by
-	".mediasize"), and width and height of the box. The default units
-	are points. The TrimBox specifies how the page is to be cut after
-	it has been printed; it is sort of an electronic equivalent for
-	cut marks (which should continue to be printed in addition). See
-	also the ".cropat" and ".bleedat" requests.
+	printing of visible cut marks, registration marks, and/or color
+	bars when used with "dpost -M cut:registration:colorbars". The
+	four arguments give the offset from the left and top margins of
+	the document (as set by ".mediasize"), and width and height of
+	the box. The default units are points. The TrimBox specifies how
+	the page is to be cut after it has been printed; it is sort of
+	an electronic equivalent for cut marks (which should continue to
+	be printed in addition). See also the ".cropat" and ".bleedat"
+	requests.
 
 .warn [+|-][bits|name] ...
 	controls warning messages, which may be given either numerically
@@ -604,4 +605,4 @@ x X TrimAt left-offset top-offset width height
 	in device units.
 
 
-Gunnar Ritter                                                   1/1/06
+Gunnar Ritter                                                   1/7/06
